@@ -1,5 +1,0 @@
-@echo off
-rem Set
-rem  exec_vlan = .\\util\\test.bat
-rem in your firewall-config.properties to run the firewall in a dev environment
-echo DebugScript: %*
