@@ -135,7 +135,7 @@ locale-de-DE = Deutsch
 locale-en-US = Englisch
 phone = Telefonnummer
 birthday = Geburtsdatum
-matriculationNumber = RWTH-Matrikelnr.
+matriculationNumber = Matrikelnr.
 timUsername = TIM-Kennung
 comments = Kommentare
 #gender = Geschlecht
