@@ -135,7 +135,7 @@ locale-de-DE = German
 locale-en-US = English
 phone = Phone number
 birthday = Date of Birth
-matriculationNumber = RWTH Matriculation no.
+matriculationNumber = Matriculation no.
 timUsername = TIM Username
 comments = Comments
 #gender = Gender
