@@ -52,7 +52,6 @@ $(document).ready(function() {
 	<li class="dropdown">
 		<a class="active dropdown-toggle" data-toggle="dropdown" href="#" role="button">{{ i18n("strings", "tools") }} <span class="caret"></span></a>
 		<ul class="dropdown-menu">
-			<li><a href="{{ pathprefix }}{{ admin_pathprefix }}/birthdays">{{ i18n("strings", "birthdays") }}</a></li>
 			<li><a href="{{ pathprefix }}{{ admin_pathprefix }}/changelog">{{ i18n("strings", "changelog") }}</a></li>
 			{# <li role="separator" class="divider"></li>
 			<li><a href="{{ pathprefix }}{{ admin_pathprefix }}/groups">{{ i18n("strings", "usersGroups") }}</a></li> #}
