@@ -1,0 +1,8 @@
+1617639500 00:11:22:33:44:55 192.168.101.10 my-laptop *
+1617641200 11:22:33:44:55:66 192.168.101.11 my-phone *
+1617642900 22:33:44:55:66:77 192.168.101.12 my-tablet *
+1617644600 33:44:55:66:77:88 192.168.101.13 my-tv *
+1617646300 44:55:66:77:88:99 192.168.101.14 my-printer *
+1617648000 55:66:77:88:99:00 192.168.101.15 my-smartwatch *
+1617649700 66:77:88:99:00:11 192.168.101.16 my-gaming-pc *
+1617651400 77:88:99:00:11:22 192.168.101.17 my-nas *
