@@ -1,0 +1,2 @@
+#!/bin/sh
+echo "Firewall Script started with parameters: $@"
