@@ -15,12 +15,12 @@ api_key = changeme
 
 # If configured, then an updated network host list will be sent to the specified URL each time a host is added or removed.
 # NOTE: requests to this URL will include the plaintext firewall API key.
-#api_hosts_push_url = http://127.0.0.1/seilnet/api/hosts
+api_hosts_push_url = http://seilnet-main/seilnet/api/hosts
 
 ########## DHCP ##########
 # Path to the dnsmasq IPv4 lease file.
 # Usually located in /var/lib/misc/dnsmasq.leases
-dnsmasq_lease_file = ./util/example-leases.txt
+dnsmasq_lease_file = ./dnsmasq/example-leases.txt
 
 ########## FIREWALL RULESET MANAGEMENT ##########
 # The folder in which firewall rules received from the master daemon should be stored.
@@ -40,4 +40,4 @@ ruleset_storage_folder = ./rules/
 # 4. External IPv4 (e.g. 134.130.187.123)
 # 5. Comma-separated list of MAC Adresses allowed internet access (e.g. "00:11:22:33:44:55,aa:bb:cc:dd:ee:ff")
 #      can also be "none" or "any"
-exec_vlan = ./util/example-firewallscript.sh
+exec_vlan = ./example-firewallscript.sh
