@@ -33,13 +33,13 @@ web_data_directory = ./data/
 # Should be false in production and true in development, since enabling
 # it may leak sensitive information.
 # Note that the stacktrace will always be logged with level WARN.
-web_debug_show_stacktrace = false
+web_debug_show_stacktrace = true
 
 # Automatically login as a predefined User Email.
 # If a user with this Email does not exist, one with Admin rights will be created.
 # This completely disables authentication.
 # WARNING: DO NOT ENABLE IN PRODUCTION.
-# web_debug_auto_login = admin@localhost
+web_debug_auto_login = admin@localhost
 
 ########## E-MAIL ##########
 # Address and port of the SMTP server.
@@ -76,16 +76,16 @@ smtp_pass = changeme
 # web_radius_room_ssid_regex = ^Seilnet Zi\\. ([0-9]+)$
 
 ########## MYSQL DATABASE ##########
-mysql_host = 127.0.0.1
+mysql_host = mariadb
 mysql_database = Seilnet
-mysql_user = root
+mysql_user = seilnet
 # The password to use when connecting to the DB.
 # Can be left out to connect without a password.
-# mysql_pass = changeme
+mysql_pass = seilnet
 
 ########## FIREWALL CLIENT ##########
 # Address and port of the firewall server.
-firewall_addr = 127.0.0.1
+firewall_addr = seilnet-firewall
 firewall_port = 8080
 
 # API Key, as configured in the firewall.
